# MistTerm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Info.plist  LICENSE  MistTerm_操作手册.md  README.md  build.rs  docker-compose.yml  fragments.json  sessions.json  test_gui.rs  test_lrzsz.sh
.cursor/rules/: local-low-memory-validation.mdc  releases.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  feedback.yml
.github/workflows/: build.yml
assets/cmd-audit-patterns/: bash-dangerous.json  bash-safe.json  read-dangerous.json  read-safe.json  read-sensitive.json
assets/fonts/: README.md
docs/: FILE_TRANSFER_ALTERNATIVE.md  INSTALL.md  README.md  ZMODEM.md  ZMODEM_RZ_TROUBLESHOOTING.md  team-platform-integration.md
docs/archive/: CLIENT-BILLING-TEAM-INTEGRATION.md  CLIENT-GAP-ANALYSIS.md  COMMAND-ANALYTICS.md  MistTerm-2.0-Design-Document.md  MistTerm-2.0-Design-Integrated.md  MistTerm-2.0-Design.md  MistTerm-设计文档.md  P0功能详细设计.md  改造后原型.html
docs/en/: INSTALL.md  README.md
docs/manual/: MistTerm_User_Manual_en.md  MistTerm_操作手册.html  MistTerm_操作手册.md
docs/manual/screenshots/: manifest.json
docs/product/: FUNCTIONAL_SPEC.md  IMPLEMENTATION-PLAN.md  LAYOUT.md  MistTerm-Efficiency-First.md  MistTerm-设计文档.md  README.md  SPECIFICATION_DETAILED.md  UI-GUIDELINES.md  fragments-analytics.md  oauth-desktop-callback.html  proto-analytics-dashboard.html  proto-credentials-list.html  proto-credentials.html  proto-fragments-analytics.html  proto-fragments-create.html  proto-fragments-list.html  proto-monitor-dashboard.html  proto-session-dialogs.html  proto-sftp-main.html  proto-sftp.html  proto-sync-settings.html  proto-tab-interaction.html  proto-team-manage.html  proto-terminal-embedded.html  proto-terminal-main.html  proto-theme-editor.html  proto-transfer-loading.html  team-collaboration.md  改造设计规范.md  界面设计规范.md
docs/tech/: AI-INTERACTION-DESIGN.md  API.md  ARCHITECTURE.md  CLIENT-TEAM-TODO.md  COMMAND-AUDIT.md  CROSS_PLATFORM_QA.md  DEPLOYMENT.md  FEASIBILITY-ANALYSIS.md  IMPLEMENTATION-GUIDE.md  MODULE-DESIGN.md  QA.md  README.md  SECURITY.md  SERVER-API-BACKEND.md  SERVER-BACKEND.md  SMOKE.md  TEAM-PLATFORM-API.md  TEAM-PLATFORM-DEV-PLAN.md  TEAM.md  TECH-STACK.md  TECHNICAL-ASSESSMENT.md  TERMINAL-BEHAVIOR.md  TESTING.md  ZMODEM.md  security.md
docs/zh/: INSTALL.md  README.md
examples/: ssh_multi_session.rs  ssh_test.rs  test_ssh.rs
scripts/: MistTerm.iss  bundle-macos.sh  ci-smoke.ps1  ci-smoke.sh  ensure-windows-test-sshd.ps1  export-manual-html.py  fetch-cjk-font.sh  gui_automation_keys.py  gui_capture_manual.py  gui_common.py  gui_connect_transfer.py  gui_coverage.py  gui_coverage_manifest.json  gui_e2e_debug.py  gui_e2e_local_ssh.py  gui_full_workflow.py  gui_integration_report.py  gui_screen.py  gui_terminal_realworld.py  install.ps1  install.sh  package-macos-dmg.sh  package-windows-installer.ps1  restore_manual_image_paths.py  run-full-validation.ps1  run-gui-e2e.ps1  run-gui-full-workflow.ps1  run-gui-terminal-realworld.ps1  run-integration-tests.ps1  run-integration-tests.sh  run-macos-gui.sh  run-manual-capture.ps1  run-transfer-tests.ps1  setup-windows-test-lrzsz.ps1  setup-windows-test-sshd.ps1  smoke-gui-windows.ps1  smoke.sh  smoke_gui_interact.py  verify-oauth-bridge.sh
src/: lib.rs  main.rs  main.rs.bak  main.rs.simplified  main.rs.working  main_old.rs  ssh_old.rs.bak
src/core/: ai_chat_store.rs  ai_client.rs  ai_session_meta.rs  ai_settings.rs  app_settings.rs  audit.rs  batch_exec.rs  cloud_sync.rs  cmd_audit.rs  command_history.rs  connection.rs  credential.rs  fragment.rs  fragment_analytics.rs  fragment_command.rs  fragment_expr.rs  fragment_recommendations.rs  fragment_usage_log.rs  mod.rs  port_forward.rs  reconnect.rs  secret_resolver.rs  session.rs  session_logger.rs  session_sort.rs  ssh_config_importer.rs  ssh_keygen.rs  upload_policy.rs
src/core/market/: cache.rs  client.rs  mod.rs  models.rs
src/core/team/: auth.rs  cache.rs  mod.rs  (+7 more)
src/i18n/: menu.rs  mod.rs
src/lrzsz/: detector.rs  mod.rs  transfer.rs  zmodem.rs
src/monitor/: collector.rs  mod.rs  parser.rs
src/platform/: app_name.rs  docs.rs  fonts.rs  logging.rs  macos_app_name.rs  macos_ime.rs  macos_launch.rs  macos_menu.rs  mod.rs  paths.rs  shell.rs  shortcuts.rs
src/security/: device_key.rs  encrypted_file.rs  keyring.rs  mod.rs
src/ssh/: client.rs  file_transfer.rs  jump.rs  known_hosts.rs  lrzsz.rs  lrzsz_external_sz.rs  lrzsz_zmodem2_send.rs  manager.rs  mod.rs  port_forward.rs  proxy_command.rs  sftp.rs  socks_proxy.rs  user_facing.rs  zmodem_pty_pipeline.rs  zmodem_pty_prefix.rs
src/sync/: git.rs  mod.rs
src/terminal/: alacritty.rs  emulator.rs  mod.rs  style.rs
src/test_support/: mod.rs  ssh_local.rs  team_api.rs
src/ui/: ai_panel.rs  app.rs  audit_log_dialog.rs  batch_exec_dialog.rs  chrome.rs  cloud_sync_panel.rs  command_history_overlay.rs  credential_panel.rs  dialogs.rs  fragment_analytics_dialog.rs  fragment_library.rs  git_sync.rs  help_docs_dialog.rs  icons.rs  keyboard_shortcuts.rs  layout_util.rs  markdown_view.rs  mod.rs  monitor_panel.rs  port_forward_panel.rs  preferences_dialog.rs  session_log_dialog.rs  sftp_panel.rs  sidebar.rs  ssh_config_import_dialog.rs  tab_pane.rs  team_fragment_dialog.rs  team_fragment_extras_dialog.rs  team_members_dialog.rs  team_ui.rs  terminal.rs  terminal_keys.rs  theme.rs  vault_form.rs  workspace.rs
tests/: ai_chat_store_test.rs  ai_client_test.rs  ai_settings_test.rs  app_settings_test.rs  audit_test.rs  cmd_audit_test.rs  command_history_test.rs  credential_test.rs  fragment_analytics_test.rs  fragment_expr_test.rs  fragment_recommendations_test.rs  fragment_test.rs  fragment_usage_log_test.rs  keyboard_shortcuts_integration_test.rs  market_client_test.rs  monitor_integration_test.rs  monitor_snapshot_test.rs  port_forward_test.rs  reconnect_test.rs  secret_resolver_test.rs  session_ssh_agent_test.rs  sftp_integration_test.rs  ssh_config_importer_test.rs  ssh_transfer_three_modes.rs  team_api_test.rs  terminal_focus_test.rs  upload_policy_test.rs  zmodem_integration_test.rs
(+2 files in other folders)
